2008-02-04 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/Makefile.am: Remove some CFLAGS to be buildable on Solaris. 

	Fixes bug #188872 (launchpad). Patch by Li Yuan.

2008-01-31 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-main.c: Fix critical gconf error.
	Threshold option is integer, not float.

2008-01-27 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment to 2.21.91

2008-01-27 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS:

	Prepare for 2.21.90 release 

2008-01-22 Gerd Kohlberger <gerdk@svn.gnome.org>
	* man/mousetweaks.1
	* man/dwell-click-applet.1
	* man/pointer-capture-applet.1
	
	Update bug information and some restructuring.
	
2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* README:

	Fix version in README changed by mistake in revision 28

2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* man/dwell-click-applet.1:
	* man/pointer-capture-applet.1:

	Add man pages for the two panel applets

2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* man/mousetweaks.1:

	Differentiate minus and hyphen in man page

2008-01-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* README:

	Add homepage of mousetweaks to README

2008-01-21 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-main.c: Fix command-line -m switch to enable the correct mode.

2008-01-21 Gerd Kohlberger <gerdk@svn.gnome.org>
	* data/mousetweaks.schemas.in:
	* data/pointer-capture-applet.schemas.in:
	* data/Makefile.am:
	* po/POTFILES.in:

	Mark schema files for translation and update descriptions.
	
2008-01-20 Gerd Kohlberger <gerdk@svn.gnome.org>
	* data/PointerCapture.xml:
	* data/DwellClick.xml:
	* data/Makefile.am:
	* src/dwell-click-applet.c:
	* src/pointer-capture-applet.c:
	
	Move applet context menus to external XML file
	
	* po/POTFILES.in: Add new XML files

2008-01-15 Francesco Fumanti <frfumanti@svn.gnome.org>

	* src/Makefile.am:

	Remove trailing space after backslash at end-of-line
